Get rid of Gradle warnings